--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-rademacher-blinds",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "rademacher blinds plugin for homebridge: https://github.com/jortgies/homebridge-rademacher-blinds",
   "license": "MIT",
   "keywords": [
@@ -16,5 +16,8 @@
   "engines": {
     "node": ">=0.12.0",
     "homebridge": ">=0.2.0"
+  },
+  "dependencies": {
+    "request": "^2.79.0"
   }
 }
