--- a/config.json
+++ b/config.json
@@ -12,7 +12,8 @@
     {
       "platform": "RademacherBlinds",
       "name": "RademacherBlinds",
-      "url": "http://192.168.0.1/deviceajax.do"
+      "url": "http://192.168.0.1/deviceajax.do",
+      "inverted": true
     }
   ]
 }
