--- a/config.json
+++ b/config.json
@@ -13,7 +13,8 @@
       "platform": "RademacherHomePilot",
       "name": "RademacherHomePilot",
       "url": "http://192.168.0.1",
-      "password": ""
+      "password": "",
+      "scenes_as_switch": "false"
     }
   ]
 }
