--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "engines": {
     "node": ">=0.12.0",
-    "homebridge": ">=0.2.0"
+    "homebridge": ">=0.4.45"
   },
   "dependencies": {
-    "homebridge": "^0.4.45",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "homebridge": "^1.1.0"
   }
 }
