added possibility to already hash password in config #51

--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
       "name": "RademacherHomePilot",
       "url": "http://192.168.0.1",
       "password": "",
+      "password_hashed": "false",
       "scenes_as_switch": "false"
     }
   ]
