added debug switch to fix #54

--- a/config.json
+++ b/config.json
@@ -15,7 +15,8 @@
       "url": "http://192.168.0.1",
       "password": "",
       "password_hashed": "false",
-      "scenes_as_switch": "false"
+      "scenes_as_switch": "false",
+      "debug": "false"
     }
   ]
 }
