--- a/config.json
+++ b/config.json
@@ -12,7 +12,8 @@
     {
       "platform": "RademacherHomePilot",
       "name": "RademacherHomePilot",
-      "url": "http://192.168.0.1"
+      "url": "http://192.168.0.1",
+      "scenes_as_switch": "false",
     }
   ]
 }
